# AP1M2

./: AStar.h  BFS.h  BestFS.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  CostComparator.h  DFS.h  Matrix.cpp  Matrix.h  MatrixSolver.h  Matrixs  MyParallelServer.cpp  MyParallelServer.h  Node.cpp  Node.h  ObjectAdapter.cpp  ObjectAdapter.h  PathNode.cpp  PathNode.h  Position.h  README.md  Searchable.h  Searcher.h  Server.h  Solver.h  State.cpp  State.h  StringRevers.cpp  StringRevers.h  details  log.txt  main.cpp  server_side.cpp  server_side.h
